--- a/docs/tech/算法/算法题1.md
+++ b/docs/tech/算法/算法题1.md
@@ -222,13 +222,69 @@ class Solution:
 
 ### 三角形最小路径和(120)
 
+给定一个三角形 triangle ，找出自顶向下的最小路径和。
 
+每一步只能移动到下一行中相邻的结点上。相邻的结点 在这里指的是 下标 与 上一层结点下标 相同或者等于 上一层结点下标 + 1 的两个结点。也就是说，如果正位于当前行的下标 i ，那么下一步可以移动到下一行的下标 i 或 i + 1 。
 
+输入：triangle = [[2],[3,4],[6,5,7],[4,1,8,3]]
+输出：11
+解释：如下面简图所示：
+   2
+  3 4
+ 6 5 7
+4 1 8 3
+自顶向下的最小路径和为 11（即，2 + 3 + 5 + 1 = 11）。
 
+```python
+class Solution:
+    def minimumTotal(self, triangle: List[List[int]]) -> int:
+        n = len(triangle)#三角形行数
+        if n==1: return triangle[0][0]
+        dp = [[0]*n for i in range(n)]
+        
+        for i in range(n-1,-1,-1):
+            for j in range(len(triangle[i])):
+                if i==n-1:
+                    dp[i][j]=triangle[i][j]
+                else:
+                    dp[i][j]=min(dp[i+1][j],dp[i+1][j+1])+triangle[i][j]#(i,j)到达最后一行的最小路径 = min((i+1,j), (i+1,j+1))+triangle[i][j]
+        return dp[0][0]
+```
 
 
 
 ### 零钱兑换(322)
+
+给你一个整数数组 coins ，表示不同面额的硬币；以及一个整数 amount ，表示总金额。
+
+计算并返回可以凑成总金额所需的 最少的硬币个数 。如果没有任何一种硬币组合能组成总金额，返回 -1 。
+
+你可以认为每种硬币的数量是无限的。
+
+例：输入：coins = [1, 2, 5], amount = 11
+输出：3 
+解释：11 = 5 + 5 + 1
+
+输入：coins = [2], amount = 3
+输出：-1
+
+```python
+class Solution:
+    def coinChange(self, coins: List[int], amount: int) -> int:
+      	res = [0 for _ in range(amount + 1)]
+        
+        for i in range(1, amount + 1):
+            cost = float('inf')
+            for c in coins:
+                if i - c >= 0:
+                    cost = min(cost, res[i - c] + 1)
+            res[i] = cost
+        
+        if res[amount] == float('inf'):
+            return -1
+        else:
+            return res[amount]
+```
 
 
 
@@ -1002,6 +1058,41 @@ class LFUCache:
 深度优先搜索算法（英語：Depth-First-Search，DFS）是一种用于遍历或搜索树或图的算法。 这个算法会尽可能深的搜索树的分支。 当节点v的所在边都己被探寻过，搜索将回溯到发现节点v的那条边的起始节点。
 
 广度优先算法（Breadth-First-Search），简称BFS，是一种图形搜索演算法。 简单的说，BFS是从根节点开始，沿着树的宽度遍历树的节点，如果发现目标，则演算终止。
+
+
+
+## 权重随机数528
+
+给定一个正整数数组 w ，其中 w[i] 代表下标 i 的权重（下标从 0 开始），请写一个函数 pickIndex ，它可以随机地获取下标 i，选取下标 i 的概率与 w[i] 成正比。
+
+例如，对于 w = [1, 3]，挑选下标 0 的概率为 1 / (1 + 3) = 0.25 （即，25%），而选取下标 1 的概率为 3 / (1 + 3) = 0.75（即，75%）。
+
+也就是说，选取下标 i 的概率为 w[i] / sum(w) 。
+
+```javascript
+var Solution = function(w) {
+  this.rates = []
+  const sum = w.reduce((sum, item) => sum + item, 0)
+  let temp = 0
+  for (let i = 0; i < w.length; i++) {
+    let rate = (w[i] / sum)
+    temp += rate
+    this.rates.push(temp.toFixed(2) * 1)
+    rate = null
+  }
+};
+
+Solution.prototype.pickIndex = function() {
+  const num = Math.random().toFixed(2) * 1
+  for (let i = 0; i < this.rates.length; i++) {
+    if (num <= this.rates[i]) {
+      return i
+    }
+  }
+};
+```
+
+轮盘赌算法
 
 
 
