--- a/docs/tech/进阶前端技术/前端工程化二.md
+++ b/docs/tech/进阶前端技术/前端工程化二.md
@@ -1,5 +1,5 @@
 ---
-title: 前端进阶（二）-前端工程化
+title: 前端进阶（一）-前端工程化
 date: 2020-12-15 21:40:33
 categories: IT
 tags: IT，Web,数据库
@@ -13,546 +13,850 @@ thumbnail: http://cdn.kunkunzhang.top/webpack.png
 
 <!--more-->
 
-## js底层原理
+## webpack原理
 
-### js执行过程
+### tree shaking原理
 
-JavaScript是一种解释型语言，执行时按照解释器-编译器-执行的顺序进行。
+Tree-shaking的本质是消除无用的js代码。无用代码消除在广泛存在于传统的编程语言编译器中，编译器可以判断出某些代码根本不影响输出，然后消除这些代码，这个称之为DCE（dead code elimination）
 
-解释器：
+Tree-shaking 是 DCE 的一种新的实现，Javascript同传统的编程语言不同的是，javascript绝大多数情况需要通过网络进行加载，然后执行，加载的文件大小越小，整体执行时间更短，所以去除无用代码以减少文件体积，对javascript来说更有意义。
 
-JavaScript的解释器包含在即时编译器(JIT，just in time)中，在一句一句编译源代码的同时又会将编译后的一些代码保存下来。
+Tree-shaking 和传统的 DCE的方法又不太一样，传统的DCE 消灭不可能执行的代码，而Tree-shaking 更关注宇消除没有用到的代码。
 
-即时编译器中首先有监视器监控着代码的运行状况。如果一段代码运行了几次，那么这段代码就会被标记为warm代码，标记为warm的代码会被编译器送到基线编译器编译，同时把结果缓存起来，如果一个函数被基线编译器编译，那么函数的每一行都会被编译成一个表，这个表的索引是行号和变量类型，如果监视器发现有代码使用相同的变量类型命中这段代码时，JIT会直接提取这段代码编译后的内容。
+Dead Code 一般具有以下几个特征
 
-如果标记为warm的代码还在不断被调用，那么它会被标记为hot，标记为hot的代码，意味着可能会被经常调用，所以可能需要更多时间优化编译结果。监视器会把该段代码送到优化编译器，编译成一个高效的版本并存储下来。
+•代码不会被执行，不可到达
 
-编译：
+•代码执行的结果不会被用到
 
-parse阶段-
+•代码只会影响死变量（只写不读）
 
-词法分析和语法分析：词法分析是把需要执行的代码字符串分割出来，生成一系列token，便于做语法分析
+JavaScript代码的tree shaking不是rollup，webpack，cc做的，而是著名的代码压缩优化工具uglify，uglify完成了javascript的DCE。
 
-语法分析分析上述输出，输出AST抽象语法树，如果分析发现异常则抛出错误。
+模块必须采用ES6Module语法，因为treeShaking依赖ES6的静态语法：import 和 export。如果项目中使用了babel的话， `@babel/preset-env`默认将模块转换成CommonJs语法，因此需要设置`module：false`，webpack2后已经支持ESModule。
 
-Ignition：Ignition是v8的解释器，它会根据抽象语法树生成对应的字节码并执行。
+ES6模块依赖关系是确定的，和运行时的状态无关，可以进行可靠的静态分析，这就是tree-shaking的基础。
 
-所谓字节码，就是机器码的抽象，机器码虽然运行效率最高，但是占用空间较大，导致十分占内存，所以以时间换空间，引入字节码
+所谓静态分析就是不执行代码，从字面量上对代码进行分析，ES6之前的模块化，比如我们可以动态require一个模块，只有执行后才知道引用的什么模块，这个就不能通过静态分析去做优化。
 
-Turbofan：Turbofan能够把字节码翻译成机器码，当发现hot代码时，turbofan会把字节码翻译成机器码，然后调用生成的机器码。如果发现假设失效，则退回字节码
+原理总结：
 
-Orinoco：Orinoco是v8的垃圾回收模块
+- 只能作为模块顶层的语句出现
+- import的模块名只能是字符串常量
+- import binding 是 immutable的，引入的模块不能再进行修改
 
-执行：
+代码删除：
 
-执行阶段有执行上下文和执行栈两个概念
+- uglify：判断程序流，判断变量是否被使用和引用，进而删除代码
 
-执行上下文就是JavaScript的运行环境，通常有
+tree shaking具体能做的事情：
 
-全局执行上下文，即window对象
+1.Webpack Tree shaking从ES6顶层模块开始分析，可以清除未使用的模块
 
-函数执行上下文，即函数执行的时候被创建，每次调用函数就会创建一个新的执行上下文
+2.Webpack Tree shaking会对多层调用的模块进行重构，提取其中的代码，简化函数的调用结构
 
-eval执行上下文
+3.Webpack Tree shaking不会清除IIFE(立即调用函数表达式)：因为IIFE比较特殊，它在被翻译时(JS并非编译型的语言)就会被执行，Webpack不做程序流分析，它不知道IIFE会做什么特别的事情，所以不会删除这部分代码
 
-对于每个执行上下文创建时，都有三个比较重要的属性：
+4.Webpack Tree shaking对于IIFE的返回函数，如果未使用会被清除
 
-变量对象：表示执行上下文的数据作用域，
+5.Webpack Tree shaking结合第三方包使用，引入第三方包时不同的方式会造成不同的优化
 
-作用域链
+```javascript
+//全部引入，webpack不能清理
+import _ from 'lodash'
+import {last} from 'lodash'
+//第三种打包体积减少
+import last from 'lodash/last'; 
+```
 
-确定this指向：
 
-执行栈：
 
-js通过执行栈管理多个执行上下文，执行栈最底端是全局上下文，全局上下文中执行函数的时候，相应上下文会入栈，其中不断调用函数，不同的函数不断创建不同的执行上下文，直到函数执行完毕，上下文出栈，即后进先出
+链接：https://juejin.cn/post/6844903544756109319`side effects`是指那些当`import`的时候会执行一些动作，但是不一定会有任何`export`。比如`ployfill`,`ployfills`不对外暴露方法给主程序使用。
 
-如果有异步函数，在执行栈的空的时候查看任务队列，微任务优先入栈。
+`tree shaking` 不能自动的识别哪些代码属于`side effects`，因此手动指定这些代码显得非常重要，如果不指定可能会出现一些意想不到的问题。
 
-### AST的应用
+在`webapck中`，是通过`package.json`的`sideEffects`属性来实现的。
 
-Es-lint就是使用ast查询器查询AST，AST选择器类似CSS选择器，每个ESlint规则都是通过选择器操作的
+```
+{
+  "name": "tree-shaking",
+  "sideEffects": false
+}
+```
 
-Babel:Babel对于一段代码的工作流程是：
+如果所有代码都不包含副作用，我们就可以简单地将该属性标记为`false`，来告知 `webpack`，它可以安全地删除未用到的`export`导出。
 
-1.输入代码 2.词法分析，将代码分成token 3.语法分析：把token转换成AST
+如果你的代码确实有一些副作用，那么可以改为提供一个数组：
 
-4.遍历AST 5.改变AST，增删改查。 6.AST转换为源代码
+```
+{
+  "name": "tree-shaking",
+  "sideEffects": [
+    "./src/common/polyfill.js"
+  ]
+}
+```
 
-webpack：webpack主要通过遍历AST分析出模块的依赖、消除无用代码等
+### HMR原理
 
-## Gulp
+Hot Module Replace是webpack一个重要的特性，当代码文件修改并保存之后，webapck通过watch监听到文件发生变化，会对代码文件重新打包生成两个模块补丁文件manifest（js）和一个（或多个）updated chunk（js），将结果存储在内存文件系统中，通过websocket通信机制将重新打包的模块发送到浏览器端，浏览器动态的获取新的模块补丁替换旧的模块，浏览器不需要刷新页面就可以实现应用的更新。
 
-Gulp基于Node.js的前端构建工具，通过Gulp的插件可以实现前端代码的编译（sass、less）、压缩、测试；图片的压缩；浏览器自动刷新，还有许多强大的插件可以在[这里](https://gulpjs.com/plugins/)查找。
+
+
+HMR的工作原理
+
+1.webpack --watch启动监听模式之后，webpack第一次编译项目，并将结果存储在内存文件系统，相比较磁盘文件读写方式内存文件管理速度更快，内存webpack服务器通知浏览器加载资源，浏览器获取的静态资源除了JS code内容之外，还有一部分通过webpack-dev-server注入的的 HMR runtime代码，作为浏览器和webpack服务器通信的客户端（ webpack-hot-middleware提供类似的功能）。
+
+2.文件系统中一个文件（或者模块）发生变化，webpack监听到文件变化对文件重新编译打包，每次编译生成唯一的hash值，根据变化的内容生成两个补丁文件：说明变化内容的manifest（文件格式是hash.hot-update.json，包含了hash和chundId用来说明变化的内容）和chunk js（hash.hot-update.js）模块。
+
+3.hrm-server通过websocket将manifest推送给浏览器
+
+浏览器接受到最新的hotCurrentHash，触发 hotDownloadManifest 函数，获取manifest json 文件。
+
+4.浏览器端hmr runtime根据manifest的hash和chunkId使用ajax拉取最新的更新模块chunk
+
+5.触发render流程实现局部热重载
+
+HMR runtime 调用window["webpackHotUpdate"] 方法，调用hotAddUpdateChunk
+
+HMR相关的中间件
+
+1. **webpack-dev-middleware**
+
+本质上是一个容器，将webpack处理后的文件传递个服务器。
+
+webpack-dev-middleware 是一个 express 中间件，核心实现两个功能：第一通过file-loader内部集成了node的 monery-fs/memfs 内部文件系统,，直接将资源存储在内存；第二是通过watch监听文件的变化，动态编译。
+
+**2.webpack-hot-middleware**
+
+核心是给webpack提高服务端和客户端之间的通信机制，内部使用windoe.EventSocurce实现。
+
+在webpack第一次打包的时候，除了代码本身之外，还包含一部分HMRruntime订阅服务代码，HMRruntime 订阅服务端的更新变化，触发HMR runtime API拉取最新的资源模块。
+
+webpack-hot-middleware实现页面的热重载。
+
+**3. webpack-dev-server**
+
+内置了webpack-dev-middleware和express服务器，利用webpack-dev-middleware提供文件的监听和编译，利用express提供http服务，底层利用websocket代替EventSource实现了webpack-hot-middleware提供的客户端和服务器之间的通信机制。
+
+### webpack生命周期/构建原理
+
+从启动构建到输出结果一系列过程：
+
+（1）初始化参数：解析webpack配置参数，合并shell传入和webpack.config.js文件配置的参数，形成最后的配置结果。
+
+（2）开始编译：上一步得到的参数初始化compiler对象，注册所有配置的插件，插件监听webpack构建生命周期的事件节点，做出相应的反应，执行对象的 run 方法开始执行编译。
+
+（3）确定入口：从配置的entry入口，开始解析文件构建AST语法树，找出依赖，递归下去。
+
+（4）编译模块：递归中根据文件类型和loader配置，调用所有配置的loader对文件进行转换，再找出该模块依赖的模块，再递归本步骤直到所有入口依赖的文件都经过了本步骤的处理。
+
+（5）完成模块编译并输出：递归完事后，得到每个文件结果，包含每个模块以及他们之间的依赖关系，根据entry配置生成代码块chunk。
+
+（6）输出完成：输出所有的chunk到文件系统。
+
+注意：在构建生命周期中有一系列插件在做合适的时机做合适事情，比如UglifyPlugin会在loader转换递归完对结果使用UglifyJs压缩覆盖之前的结果。
+
+### webpack与gulp、grunt区别
+
+webpack 是 module bundle
+
+gulp 是 tast runner
+
+Rollup 是在 Webpack 流行后出现的替代品。Rollup 在用于打包 JavaScript 库时比 Webpack 更加有优势，因为其打包出来的代码更小更快。 但功能不够完善，很多场景都找不到现成的解决方案。
+
+## 分离/合并配置
+
+安装webpack-merge
+
+```shell
+npm i webpack-merge -D
+```
+
+在webpackjs中引入别的webpack配置
+
+```javascript
+const {merge} = require('webpack-merge');
+const commonConfig = require('./webpack.common');
+
+const prodConfig = {
+    mode:'production',
+    //可以找出报错代码的源代码路径
+    //cheap 只报告行号（不加会报告列）  module 会报告loader及第三方依赖的错误位置
+    //加了inline就不产生映射文件了
+    //生产环境不需要eval
+    devtool:'cheap-module-source-map',
+    plugins: [
+    ]
+}
+
+module.exports = merge(commonConfig,prodConfig);
+```
+
+
+
+## webpack-chain
+
+
+
+
+
+## Webpack插件汇总
+
+### 功能类
+
+html-webpack-plugin
+
+自动生成html，基本用法：
+
+```javascript
+new HtmlWebpackPlugin({
+  filename: 'index.html', // 生成文件名
+  template: path.join(process.cwd(), './index.html') // 模班文件
+})
+```
+
+copy-webpack-plugin
+
+拷贝资源插件,copy-webpack-plugin不是为了复制构建过程中生成的文件，相反，它是复制源树中已经存在的文件，作为构建过程的一部分
+
+基本用法：
+
+```javascript
+new CopyWebpackPlugin([
+  {
+    from: path.join(process.cwd(), './vendor/'),
+    to: path.join(process.cwd(), './dist/'),
+    ignore: ['*.json']
+  }
+])
+```
+
+webpack-manifest-plugin && assets-webpack-plugin
+
+俩个插件效果一致，都是生成编译结果的资源单，只是资源单的数据结构不一致而已。
+
+webpack-manifest-plugin 基本用法：
+
+```javascript
+module.exports = {
+  plugins: [
+    new ManifestPlugin()
+  ]
+}
+```
+
+assets-webpack-plugin 基本用法：
+
+```javascript
+module.exports = {
+  plugins: [
+    new AssetsPlugin()
+  ]
+}
+```
+
+clean-webpack-plugin
+
+在编译之前清理指定目录指定内容,基本用法
+
+```javascript
+// 清理目录
+const pathsToClean = [
+  'dist',
+  'build'
+]
+ 
+// 清理参数
+const cleanOptions = {
+  exclude:  ['shared.js'], // 跳过文件
+}
+module.exports = {
+  // ...
+  plugins: [
+    new CleanWebpackPlugin(pathsToClean, cleanOptions)
+  ]
+}
+```
+
+compression-webpack-plugin
+
+提供带 Content-Encoding 编码的压缩版的资源,基本用法
+
+```javascript
+module.exports = {
+  plugins: [
+    new CompressionPlugin()
+  ]
+}
+```
+
+progress-bar-webpack-plugin
+
+编译进度条插件,基本用法
+
+```javascript
+module.exports = {
+  //...
+  plugins: [
+    new ProgressBarPlugin()
+  ]
+}
+```
+
+speed-measure-webpack-plugin
+
+进行构建速度分析，可以看到各个 loader、plugin 的构建时长，后续可针对耗时 loader、plugin 进行优化。
+
+```shell
+npm i -D speed-measure-webpack-plugin
+```
+
+使用
+
+```javascript
+const SpeedMeasurePlugin = require("speed-measure-webpack-plugin");
+const smp = new SpeedMeasurePlugin();
+module.exports = smp.wrap({
+  // ...webpack config...
+})
+```
+
+
+
+
+
+### 代码相关类
+
+webpack.ProvidePlugin
+
+自动加载模块，如 出现，就会自动加载模块；出现，就会自动加载模块； 默认为'jquery'的exports，用法：
+
+```javascript
+new webpack.ProvidePlugin({
+  $: 'jquery',
+})
+```
+
+webpack.DefinePlugin
+
+定义全局常量，用法：
+
+```javascript
+new webpack.DefinePlugin({
+  'process.env': {
+    NODE_ENV: JSON.stringify(process.env.NODE_ENV)
+  }
+})
+```
+
+mini-css-extract-plugin && extract-text-webpack-plugin
+
+提取css样式，对比：
+
+- mini-css-extract-plugin 为webpack4及以上提供的plugin，支持css chunk
+- extract-text-webpack-plugin 只能在webpack3 及一下的版本使用，不支持css chunk
+
+extract-text-webpack-plugin基本用法 ：
+
+```javascript
+const ExtractTextPlugin = require("extract-text-webpack-plugin");
+ 
+module.exports = {
+  module: {
+    rules: [
+      {
+        test: /\.css$/,
+        use: ExtractTextPlugin.extract({
+          fallback: "style-loader",
+          use: "css-loader"
+        })
+      }
+    ]
+  },
+  plugins: [
+    new ExtractTextPlugin("styles.css"),
+  ]
+}
+```
+
+mini-css-extract-plugin 基本用法:
+
+```javascript
+const MiniCssExtractPlugin = require("mini-css-extract-plugin");
+module.exports = {
+    module: {
+    rules: [
+      {
+        test: /\.css$/,
+        use: [
+          {
+            loader: MiniCssExtractPlugin.loader,
+            options: {
+              publicPath: '/'  // chunk publicPath
+            }
+          },
+          "css-loader"
+        ]
+      }
+    ]
+  },
+  plugins: [
+    new MiniCssExtractPlugin({
+      filename: "[name].css", // 主文件名
+      chunkFilename: "[id].css"  // chunk文件名
+    })
+  ]
+}
+```
+
+
+
+### 编译结果优化类
+
+wbepack.IgnorePlugin
+
+忽略regExp匹配的模块，用法
+
+```javascript
+new webpack.IgnorePlugin(/^\.\/locale$/, /moment$/)
+```
+
+uglifyjs-webpack-plugin
+
+代码丑化，用于js压缩,
+
+```javascript
+module.exports = {
+  //...
+  optimization: {
+    minimizer: [new UglifyJsPlugin({
+      cache: true,   // 开启缓存
+      parallel: true, // 开启多线程编译
+      sourceMap: true,  // 是否sourceMap
+      uglifyOptions: {  // 丑化参数
+        comments: false,
+        warnings: false,
+        compress: {
+          unused: true,
+          dead_code: true,
+          collapse_vars: true,
+          reduce_vars: true
+        },
+        output: {
+          comments: false
+        }
+      }
+    }]
+  }
+};
+```
+
+optimize-css-assets-webpack-plugin
+
+css压缩，主要使用 [cssnano](https://github.com/cssnano/cssnano) 压缩器,用法
+
+```javascript
+module.exports = {
+  //...
+  optimization: {
+    minimizer: [new OptimizeCssAssetsPlugin({
+      cssProcessor: require('cssnano'),   // css 压缩优化器
+      cssProcessorOptions: { discardComments: { removeAll: true } } // 去除所有注释
+    })]
+  }
+};
+```
+
+webpack-md5-hash
+
+使你的chunk根据内容生成md5，用这个md5取代 webpack chunkhash,基本用法
+
+```javascript
+var WebpackMd5Hash = require('webpack-md5-hash');
+ 
+module.exports = {
+  // ...
+  output: {
+    //...
+    chunkFilename: "[chunkhash].[id].chunk.js"
+  },
+  plugins: [
+    new WebpackMd5Hash()
+  ]
+};
+```
+
+SplitChunksPlugin
+
+CommonChunkPlugin 的后世，用于chunk切割。
+
+webpack 把 chunk 分为两种类型，一种是初始加载initial chunk，另外一种是异步加载 async chunk，如果不配置SplitChunksPlugin，webpack会在production的模式下自动开启，默认情况下，webpack会将 node_modules 下的所有模块定义为异步加载模块，并分析你的 entry、动态加载（import()、require.ensure）模块，找出这些模块之间共用的node_modules下的模块，并将这些模块提取到单独的chunk中，在需要的时候异步加载到页面当中，其中默认配置如下：
+
+```javascript
+module.exports = {
+  //...
+  optimization: {
+    splitChunks: {
+      chunks: 'async', // 异步加载chunk
+      minSize: 30000,
+      maxSize: 0,
+      minChunks: 1,
+      maxAsyncRequests: 5,
+      maxInitialRequests: 3,
+      automaticNameDelimiter: '~', // 文件名中chunk分隔符
+      name: true,
+      cacheGroups: {
+        vendors: {
+          test: /[\\/]node_modules[\\/]/,  // 
+          priority: -10
+        },
+        default: {
+          minChunks: 2,  // 最小的共享chunk数
+          priority: -20,
+          reuseExistingChunk: true
+        }
+      }
+    }
+  }
+};
+```
+
+### 编译优化类
+
+DllPlugin && DllReferencePlugin && autodll-webpack-plugin
+
+dllPlugin 将模块预先编译，DllReferencePlugin 将预先编译好的模块关联到当前编译中，当 webpack 解析到这些模块时，会直接使用预先编译好的模块。
+
+autodll-webpack-plugin 相当于 dllPlugin 和 DllReferencePlugin 的简化版，其实本质也是使用 dllPlugin && DllReferencePlugin，它会在第一次编译的时候将配置好的需要预先编译的模块编译在缓存中，第二次编译的时候，解析到这些模块就直接使用缓存，而不是去编译这些模块。
+
+dllPlugin 基本用法：
+
+```javascript
+const output = {
+  filename: '[name].js',
+  library: '[name]_library',
+  path: './vendor/'
+}
+
+module.exports = {
+  entry: {
+    vendor: ['react', 'react-dom']  // 我们需要事先编译的模块，用entry表示
+  },
+  output: output,
+  plugins: [
+    new webpack.DllPlugin({  // 使用dllPlugin
+      path: path.join(output.path, `${output.filename}.json`),
+      name: output.library // 全局变量名， 也就是 window 下 的 [output.library]
+    })
+  ]
+}
+```
+
+DllReferencePlugin 基本用法：
+
+```javascript
+const manifest = path.resolve(process.cwd(), 'vendor', 'vendor.js.json')
+
+module.exports = {
+  plugins: [
+    new webpack.DllReferencePlugin({
+      manifest: require(manifest), // 引进dllPlugin编译的json文件
+      name: 'vendor_library' // 全局变量名，与dllPlugin声明的一致
+    }
+  ]
+}
+```
+
+autodll-webpack-plugin 基本用法：
+
+```javascript
+module.exports = {
+  plugins: [
+    new AutoDllPlugin({
+      inject: true, // 与 html-webpack-plugin 结合使用，注入html中
+      filename: '[name].js',
+      entry: {
+        vendor: [
+          'react',
+          'react-dom'
+        ]
+      }
+    })
+  ]
+}
+```
+
+happypack && thread-loader
+
+多线程编译，加快编译速度，thread-loader不可以和 mini-css-extract-plugin 结合使用。
+
+happypack 基本用法：
+
+```javascript
+const HappyPack = require('happypack');
+const os = require('os');
+const happyThreadPool = HappyPack.ThreadPool({ size: os.cpus().length });
+const happyLoaderId = 'happypack-for-react-babel-loader';
+
+module.exports = {
+  module: {
+    rules: [{
+      test: /\.jsx?$/,
+      loader: 'happypack/loader',
+      query: {
+        id: happyLoaderId
+      },
+      include: [path.resolve(process.cwd(), 'src')]
+    }]
+  },
+  plugins: [new HappyPack({
+    id: happyLoaderId,
+    threadPool: happyThreadPool,
+    loaders: ['babel-loader']
+  })]
+}
+```
+
+thread-loader 基本用法:
+
+```javascript
+module.exports = {
+  module: {
+    rules: [
+      {
+        test: /\.js$/,
+        include: path.resolve("src"),
+        use: [
+          "thread-loader",
+          // your expensive loader (e.g babel-loader)
+          "babel-loader"
+        ]
+      }
+    ]
+  }
+}
+```
+
+
+
+hard-source-webpack-plugin && cache-loader
+
+使用模块编译缓存，加快编译速度。
+
+hard-source-webpack-plugin ,基本用法:
+
+```javascript
+module.exports = {
+  plugins: [
+    new HardSourceWebpackPlugin()
+  ]
+}
+```
+
+cache-loader 基本用法：
+
+```javascript
+module.exports = {
+  module: {
+    rules: [
+      {
+        test: /\.ext$/,
+        use: [
+          'cache-loader',
+          ...loaders
+        ],
+        include: path.resolve('src')
+      }
+    ]
+  }
+}
+```
+
+### 编译分析类
+
+webpack-bundle-analyzer
+
+编译模块分析插件，基本用法
+
+```javascript
+new BundleAnalyzerPlugin({
+  analyzerMode: 'server',
+  analyzerHost: '127.0.0.1',
+  analyzerPort: 8889,
+  reportFilename: 'report.html',
+  defaultSizes: 'parsed',
+  generateStatsFile: false,
+  statsFilename: 'stats.json',
+  statsOptions: null,
+  logLevel: 'info'
+}),
+```
+
+stats-webpack-plugin && PrefetchPlugin
+
+stats-webpack-plugin 将构建的统计信息写入文件，该文件可在 http://webpack.github.io/analyse中上传进行编译分析，并根据分析结果，可使用 PrefetchPlugin 对部分模块进行预解析编译
+
+stats-webpack-plugin 基本用法：
+
+```javascript
+module.exports = {
+  plugins: [
+    new StatsPlugin('stats.json', {
+      chunkModules: true,
+      exclude: [/node_modules[\\\/]react/]
+    })
+  ]
+};
+```
+
+PrefetchPlugin 基本用法：
+
+```javascript
+module.exports = {
+  plugins: [
+    new webpack.PrefetchPlugin('/web/', 'app/modules/HeaderNav.jsx'),
+    new webpack.PrefetchPlugin('/web/', 'app/pages/FrontPage.jsx')
+];
+}
+```
+
+speed-measure-webpack-plugin
+
+统计编译过程中，各loader和plugin使用的时间,基本用法
+
+```javascript
+const SpeedMeasurePlugin = require("speed-measure-webpack-plugin");
+ 
+const smp = new SpeedMeasurePlugin();
+ 
+const webpackConfig = {
+  plugins: [
+    new MyPlugin(),
+    new MyOtherPlugin()
+  ]
+}
+module.exports = smp.wrap(webpackConfig);
+```
+
+### react相关
+
+react-refresh-webpack-plugin
+
+热更新 react 组件。
+
+```shell
+npm install -D @pmmmwh/react-refresh-webpack-plugin react-refresh
+```
+
+使用
+
+```javascript
+const ReactRefreshWebpackPlugin = require('@pmmmwh/react-refresh-webpack-plugin');
+
+module.exports = {
+    plugins: [
+        new webpack.HotModuleReplacementPlugin(),
+        new ReactRefreshWebpackPlugin(),
+    ]
+}
+```
+
+
+
+### 上传oss
+
+如果希望webpack可以自动上传静态资源（如js，css等）到阿里云oss上，可以使用webpack-aliyun-oss这款插件
 
 安装
 
 ```shell
- npm install gulp -g
+npm i webpack-aliyun-oss -D
 ```
 
-### Gulp Api
+配置
 
-使用gulp，仅需知道4个API即可：`gulp.task()`,`gulp.src()`,`gulp.dest()`,`gulp.watch()`
+```javascript
+const WebpackAliyunOss = require('webpack-aliyun-oss');
+const webpackConfig = {
+  // ... 省略其他
+  plugins: [new WebpackAliyunOss({
+    from: ['./build/**', '!./build/**/*.html'],//排除html文件
+    dist: 'path/in/alioss',
+    region: 'your region',
+    accessKeyId: 'your key',
+    accessKeySecret: 'your secret',
+    bucket: 'your bucket',
+    
+    // 如果希望重新组织上传路径，可以传这个函数
+    // 否则按构建目录的结构上传
+    setOssPath(filePath) {
+      // filePath为当前文件路径，函数应该返回路径+文件名，如/new/path/to/file.js，则最终上传路径为 path/in/alioss/new/path/to/file.js
+      
+      return '/new/path/to/file.js';
+    },
+    
+    // 如果想定义header就传
+    setHeaders(filePath) {
+      // 定义当前文件header，可选
+      return {
+        'Cache-Control': 'max-age=31536000'
+      }
+    }
+  })]
+}
+```
 
-`gulp.src()`方法正是用来获取流的，但要注意这个流里的内容不是原始的文件流，而是一个虚拟文件对象流([Vinyl files](https://github.com/wearefractal/vinyl-fs))，这个虚拟文件对象中存储着原始文件的路径、文件名、内容等信息
+- ```
+  from
+  ```
 
-`gulp.dest()`方法是用来写文件的，其语法为：
+  : 上传哪些文件，支持类似gulp.src的glob方法，如'./build/**', 可以为glob字符串或者数组。
 
-gulp的使用流程一般是这样子的：首先通过`gulp.src()`方法获取到我们想要处理的文件流，然后把文件流通过pipe方法导入到gulp的插件中，最后把经过插件处理后的流再通过pipe方法导入到`gulp.dest()`中，`gulp.dest()`方法则把流中的内容写入到文件中，
+  - 作为插件使用时：可选，默认为output.path下所有的文件。
+  - 独立使用时：必须，否则不知道从哪里取图片：）
 
-`gulp.task`方法用来定义任务，内部使用的是[Orchestrator](https://github.com/robrich/orchestrator)，其语法为：
+- `dist`: 上传到oss哪个目录下，默认为oss根目录。可作为路径前缀使用。
 
-`gulp.watch()`用来监视文件的变化，当文件发生变化后，我们可以利用它来执行相应的任务，例如文件压缩等。其语法为
+- `region`: 阿里云上传区域
 
-### 常用插件
+- `accessKeyId`: 阿里云的授权accessKeyId
 
-安装gulp插件
+- `accessKeySecret`: 阿里云的授权accessKeySecret
 
-CSS
+- `bucket`: 上传到哪个bucket
 
-- sass的编译（[gulp-ruby-sass](https://github.com/sindresorhus/gulp-ruby-sass)）
-- less的编译（[gulp-less](https://www.npmjs.com/packages/gulp-less)）
-- 自动添加css前缀（[gulp-autoprefixer](https://github.com/Metrime/gulp-autoprefixer)）
-- 压缩css（[gulp-minify-css](https://github.com/jonathanepollack/gulp-minify-css)）
+- `timeout`: oss超时设置，默认为30秒(30000)
 
-js
+- `verbose`: 是否显示上传日志，默认为true
 
-- js代码校验（[gulp-jshint](https://github.com/spenceralger/gulp-jshint)）
-- 合并js文件（[gulp-concat](https://github.com/wearefractal/gulp-concat)）
-- 压缩js代码（[gulp-uglify](https://github.com/terinjokes/gulp-uglify)）
+- `deletOrigin`: 上传完成是否删除原文件，默认false
 
-html
+- `deleteEmptyDir`: 如果某个目录下的文件都上传到cdn了，是否删除此目录。deleteOrigin为true时候生效。默认false。
 
-- 压缩html([gulp-minify-html](https://www.npmjs.com/packages/gulp-minify-html))
+- `setOssPath`: 自定义上传路径的函数。接收参数为当前文件路径。不传，或者所传函数返回false则按默认路径上传。(默认为output.path下文件路径)
 
-图片、资源
+- `setHeaders`: 配置headers的函数。接收参数为当前文件路径。不传，或者所传函数返回false则不设置header。
 
-- 压缩图片（[gulp-imagemin](https://github.com/sindresorhus/gulp-imagemin)）
-- 图片缓存，只有图片替换了才压缩（[gulp-cache](https://github.com/jgable/gulp-cache)）
+- `test`: 测试，仅显示要上传的文件，但是不执行上传操作。默认false
 
-其他
 
-- 自动加载插件([gulp-load-plugins](https://www.npmjs.com/package/gulp-load-plugins))
-- 自动刷新页面（[gulp-livereload](https://github.com/vohof/gulp-livereload)）
-- 更改提醒（[gulp-notify](https://github.com/mikaelbr/gulp-notify)）
-- 重命名（[gulp-rename](https://www.npmjs.com/packages/gulp-rename)）
-- 清除文件（[del](https://www.npmjs.org/package/del)）
 
-安装这些插件
+## 利用source-map还原代码
+
+webpack打包时如果有配置sourcemap，可能在生成js时生成对应的map文件，而利用这个文件甚至可以还原js和组件
+
+reverse-sourcemap
 
 ```shell
-npm install gulp-ruby-sass gulp-autoprefixer gulp-minify-css gulp-jshint gulp-concat gulp-uglify gulp-imagemin gulp-notify gulp-rename gulp-livereload gulp-cache del --save-dev
+npm install --global reverse-sourcemap
 ```
 
-创建一个gulpfile.js在根目录下，然后在里面加载插件：
-
-```javascript
-var gulp = require('gulp'),
-    sass = require('gulp-ruby-sass'),
-    autoprefixer = require('gulp-autoprefixer'),
-    minifycss = require('gulp-minify-css'),
-    jshint = require('gulp-jshint'),
-    uglify = require('gulp-uglify'),
-    imagemin = require('gulp-imagemin'),
-    rename = require('gulp-rename'),
-    concat = require('gulp-concat'),
-    notify = require('gulp-notify'),
-    cache = require('gulp-cache'),
-    livereload = require('gulp-livereload'),
-    del = require('del');
-```
-
-创建任务
-
-```javascript
-// Load plugins
-var gulp = require('gulp'),
-    sass = require('gulp-ruby-sass'),
-    autoprefixer = require('gulp-autoprefixer'),
-    minifycss = require('gulp-minify-css'),
-    jshint = require('gulp-jshint'),
-    uglify = require('gulp-uglify'),
-    imagemin = require('gulp-imagemin'),
-    rename = require('gulp-rename'),
-    concat = require('gulp-concat'),
-    notify = require('gulp-notify'),
-    cache = require('gulp-cache'),
-    livereload = require('gulp-livereload'),
-    del = require('del');
-// Styles，编译sass，添加前缀，保存到我们指定的目录下面，还没结束，我们还要压缩，给文件添加.min后缀再输出压缩文件到指定目录，最后提醒任务完成了
-gulp.task('styles', function() {
-  return gulp.src('src/styles/main.scss')
-    .pipe(sass({ style: 'expanded', }))
-    .pipe(autoprefixer('last 2 version', 'safari 5', 'ie 8', 'ie 9', 'opera 12.1', 'ios 6', 'android 4'))
-    .pipe(gulp.dest('dist/styles'))
-    .pipe(rename({ suffix: '.min' }))
-    .pipe(minifycss())
-    .pipe(gulp.dest('dist/styles'))
-    .pipe(notify({ message: 'Styles task complete' }));
-});
-// Scripts，js代码校验、合并和压缩
-gulp.task('scripts', function() {
-  return gulp.src('src/scripts/**/*.js')
-    .pipe(jshint('.jshintrc'))
-    .pipe(jshint.reporter('default'))
-    .pipe(concat('main.js'))
-    .pipe(gulp.dest('dist/scripts'))
-    .pipe(rename({ suffix: '.min' }))
-    .pipe(uglify())
-    .pipe(gulp.dest('dist/scripts'))
-    .pipe(notify({ message: 'Scripts task complete' }));
-});
-// Images，使用imagemin插件把所有在src/images/目录以及其子目录下的所有图片（文件）进行压缩，我们可以进一步优化，利用缓存保存已经压缩过的图片
-gulp.task('images', function() {
-  return gulp.src('src/images/**/*')
-    .pipe(cache(imagemin({ optimizationLevel: 3, progressive: true, interlaced: true })))
-    .pipe(gulp.dest('dist/images'))
-    .pipe(notify({ message: 'Images task complete' }));
-});
-// Clean，在任务执行前，最好先清除之前生成的文件
-gulp.task('clean', function(cb) {
-    del(['dist/assets/css', 'dist/assets/js', 'dist/assets/img'], cb)
-});
-// Default task设置默认任务，在命令行下输入$ gulp执行的就是默认任务，现在我们为默认任务指定执行上面写好的三个任务：
-gulp.task('default', ['clean'], function() {
-    gulp.start('styles', 'scripts', 'images');
-});
-// Watch，实现当文件修改时自动刷新页面，我们要修改watch任务，配置LiveReload：
-gulp.task('watch', function() {
-  // Watch .scss files
-  gulp.watch('src/styles/**/*.scss', ['styles']);
-  // Watch .js files
-  gulp.watch('src/scripts/**/*.js', ['scripts']);
-  // Watch image files
-  gulp.watch('src/images/**/*', ['images']);
-  // Create LiveReload server
-  livereload.listen();
-  // Watch any files in dist/, reload on change
-  gulp.watch(['dist/**']).on('change', livereload.changed);
-});
-```
-
-### 其他插件
-
-打包前拷贝到dist目录，之后所有的操作基于dist目录
-
-```javascript 
-const { series, src, dest } = require('gulp');
-const clean = require('gulp-clean');
-//清除文件夹插件
-function clear() {
-	return src('dist',{ allowEmpty: true }).pipe(clean());
-}
-//拷贝静态资源
-function assets() {
-  return src('src/assets/**/*.*').pipe(dest('dist/assets/'));
-}
-//拷贝css文件
-function css() {
-  return src(['src/css/**/*.css']).pipe(dest('dist/css'));
-}
-//拷贝js文件
-function js() {
-  return src(['src/js/**/*.js']).pipe(dest('dist/js'))
-}
-//拷贝html文件
-function html() {
-  return src('src/views/**/*.html').pipe(dest('dist/views'))
-}
-
-exports.build = series(
-	clear,
-  assets,
-  css,
-  js,
-  html
-)
-```
-
-给打包文件加hash
+找到webpack生成的js对应的map文件，一般为js.map文件，进行还原
 
 ```shell
-npm i gulp-dev -D
+
 ```
-
-在gulpfile。js中添加以下代码
-
-```javascript
-const rev = require('gulp-rev');
-//给css文件加入hash
-function cssRevHash() {
-  return src('dist/css/**/*.css')
-  	.pipe(rev())
-  	.pipe(dest('/dist/css'))
-  	.pipe(rev.manifest())
-  	.pipe(dev('rev/css'));
-}
-//给js文件加入hash
-function jsRevHash() {
-  return src('dist/js/**/*.js')
-  	.pipe(rev())
-  	.pipe(dest('dist/js/'))
-  	.pipe(rev.manifest())
-  	.pipe(dev('rev/js'));
-}
-
-export.build = series(
-		...
-  	cssRevHash,
-  	jsRevHash
-)
-```
-
-替换文件中的源文件
-
-```javascript
-npm i gulp-rev-collector -D
-```
-
-在gulpfilejs中加入代码
-
-```javascript
-const revCollector = require('gulp-rev-collector');
-
-function htmlRevInject() {
-  return src([`rev/${revDir}/**/*.json`,'dist/views/**/*.html'])
-  	.pipe(revCollector({ replaceReved: true}))
-  	.pipe(dest('dist/views'));
-}
-
-exports.build = series(
-	...
-  htmlRevInject
-)
-```
-
-打包zip文件
-
-```shell
-npm i gulp-zip -D
-```
-
-在gulpfilejs中加入代码
-
-```javascript
-const zip = require('gulp-zip')
-
-function zipiupiu() {
-  return src('dist/**/*').pipe(zip(zipName)).pipe(dest('dist'));
-}
-
-exports.build = series(
-	...
-  zipiupiu
-)
-```
-
-动态处理打包环境，有prod和dev两种
-
-```shell
-npm i cross-env -D
-```
-
-在packagejson中添加命令
-
-```json
-{
-  "scripts": {
-		"build:env": "cross-env NODE_ENV=development gulp build",
-    "build:prod": "cross-env NODE_ENV=production gulp build"
-  };
-}
-```
-
-根据不同环境执行不同的打包方式，如开发环境不需要压缩。
-
-```javascript
-if (process.env.NODE_ENV === 'production') {
-	exports.build = series (
-  	clear,
-    assets,
-    css,
-    js,
-    html,
-    cssRevHash,
-    jsRevHash,
-    htmlRevInject,
-    htmlMinify,
-    zipiupiu
-  )
-}else {
-  exports.build = series (
-  	clear,
-    assets,
-    css,
-    js,
-    html,
-    cssRevHash,
-    jsRevHash,
-    htmlRevInject,
-    zipiupiu
-  )
-}
-```
-
-
-
-### gulp与webpack、grant的区别
-
-与webpack
-
-gulp严格上讲，模块化不是他强调的东西，他旨在规范前端开发流程。
-
-webpack更是明显强调模块化开发，而那些文件压缩合并、预处理等功能，不过是他附带的功能。
-
-gulp应该与grunt比较，而webpack应该与browserify
-
-gulp与webpack上是互补的，还是可替换的，取决于你项目的需求。如果只是个vue或react的单页应用，webpack也就够用；如果webpack某些功能使用起来麻烦甚至没有（雪碧图就没有），那就可以结合gulp一起用。
-
-与grunt
-
-Grunt主要是以文件为媒介来运行它的工作流的，比如在Grunt中执行完一项任务后，会把结果写入到一个临时文件中，然后可以在这个临时文件内容的基础上执行其它任务，执行完成后又把结果写入到临时文件中，然后又以这个为基础继续执行其它任务...就这样反复下去。而在Gulp中，使用的是Nodejs中的[stream](http://nodejs.org/api/stream.html)(流)，首先获取到需要的stream，然后可以通过stream的`pipe()`方法把流导入到你想要的地方，比如Gulp的插件中，经过插件处理后的流又可以继续导入到其他插件中，当然也可以把流写入到文件中。所以Gulp是以stream为媒介的，它不需要频繁的生成临时文件，这也是Gulp的速度比Grunt快的一个原因。
-
-https://markpop.github.io/2014/09/17/Gulp%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/
-
-https://www.cnblogs.com/2050/p/4198792.html
-
-
-
-## Rollup
-
-应用场景:
-   项目（特别是类库）只有 js，而没有其他的静态资源文件，使用 webpack 就有点大才小用了，因为 webpack bundle 文件的体积略大，运行略慢，可读性略低。这时候 [rollup](https://github.com/rollup/rollup)就是一种不错的解决方案
-
-### Rollup 的好处
-
-- Tree Shaking: 自动移除未使用的代码, 输出更小的文件
-- Scope Hoisting: 所有模块构建在一个函数内, 执行效率更高
-- Config 文件支持通过 ESM 模块格式书写
-- 可以一次输出多种格式:IIFE, AMD, CJS, UMD, ESM
-- Development 与 production 版本: .js, .min.js
-- 文档精简
-
-### 基础插件
-
-- rollup-plugin-alias: 提供 modules 名称的 alias 和 reslove 功能.
-- rollup-plugin-babel: 提供 Babel 能力, 需要安装和配置 Babel (这部分知识不在本文涉及)
-- rollup-plugin-eslint: 提供 ESLint 能力, 需要安装和配置 ESLint (这部分知识不在本文涉及)
-- rollup-plugin-node-resolve: 解析 node_modules 中的模块
-- rollup-plugin-commonjs: 转换 CJS -> ESM, 通常配合上面一个插件使用
-- rollup-plugin-replace: 类比 Webpack 的 DefinePlugin , 可在源码中通过 process.env.NODE_ENV 用于构建区分 Development 与 Production 环境.
-- rollup-plugin-filesize: 显示 bundle 文件大小
-- rollup-plugin-uglify: 压缩 bundle 文件
-- rollup-plugin-serve: 类比 webpack-dev-server, 提供静态服务器能力
-
-
-
-## Grunt
-
-
-
-安装cli工具
-
-```shell
-npm install -g grunt-cli
-```
-
-安装grunt及用到的插件
-
-```shell
-npm install gulp grunt-contrib-uglify --save-dev
-```
-
-创建`Gruntfile.js`文件
-
-```javascript
-module.exports = function(grunt) {
-    // Project configuration.
-    grunt.initConfig({
-        pkg: grunt.file.readJSON('package.json'),
-        uglify: {
-            options: {
-                banner: '/*! <%= pkg.name %> <%= grunt.template.today("yyyy-mm-dd") %> */\n'
-            },
-            build: {
-                src: 'src/*.js',
-                dest: 'build/all.min.js'
-            }
-        }
-    });
-    // 加载包含 "uglify" 任务的插件。
-    grunt.loadNpmTasks('grunt-contrib-uglify');
-    // 默认被执行的任务列表。
-    grunt.registerTask('default', ['uglify']);
-};
-```
-
-大部分的Gruntfile.js都非常臃肿，有一大段一大段的嵌套配置结构，令人看起来很烦躁。这些冗余的`Gruntfile.js`文件其实维护起来并不是那么轻量的，主要体现在下面几个方面，
-
-1. 配置和运行分离
-2. 大部分插件的职责不单一，做了不仅一件事
-3. 配置项过多，做的事情越多，配置增长的就越快，且越不可控制
-4. 任务执行中会产生一些临时文件，较频繁的IO操作导致性能滞后
-
-我们再来看看gulp中是如何解决这些问题的，
-
-1. gulp遵循**code over configuration**的原则，直接就在调用的地方配置
-2. gulp的插件严格遵循单一职责原则，一个插件仅作一件事，一个gulp一般只有20多行代码就搞定
-3. gulp基于流的思想，并没有过多的配置，任务更多的像是在写代码而不是定义配置
-4. 这个是grunt的致命伤，gulp的流式构建改变了底层的流程控制，不再频繁的去进行IO操作了
-
-## Parcel
-
-
-
-
-
-## ESbuild
-
-esbuild是新一代的Javascript打包工具。
-
-esbuild以速度快著称，耗时只有webpack的2%到3%。很多工具都内置了esbuild，比如vite和snowpack
-
-esbuild快的原因：
-
-1.使用Go语言编写，可以编译为原生代码
-
-2.解析、打印和源映射完全并行化
-
-3.无须昂贵的数据转换，只需很少的几步完成
-
-目前支持：
-
-commonjs模块、es6模块
-
-使用--bundle与es6模块的静态绑定打包
-
-使用--minify完全压缩（空格、标识符和修饰符）
-
-使用--sourcemap完全支持源映射
-
-支持jsx转向js
-
-使用--define进行编译时标识符替换
-
-使用package.json中的browser字段进行替换
-
-自动监测tsconfig中的baseUrl
-
-
-
-### Vite
-
-
-
-### snowpack
-
-
-
-
-
-## WebRTC
 
 
 
@@ -562,7 +866,7 @@ commonjs模块、es6模块
 
 wepack：https://www.kancloud.cn/sllyli/webpack/1242354
 
-
+深入浅出webpack：https://webpack.wuhaolin.cn/
 
 
 
@@ -573,5 +877,4 @@ wepack：https://www.kancloud.cn/sllyli/webpack/1242354
 
 
 ​                   
-
 
