--- a/docs/tech/进阶前端技术/前端工程化一.md
+++ b/docs/tech/进阶前端技术/前端工程化一.md
@@ -120,87 +120,64 @@ module.exports = {
 
 
 
-#### tree shaking原理
+### 外部扩展external
 
-Tree-shaking的本质是消除无用的js代码。无用代码消除在广泛存在于传统的编程语言编译器中，编译器可以判断出某些代码根本不影响输出，然后消除这些代码，这个称之为DCE（dead code elimination）
+`externals` 配置选项提供了「从输出的 bundle 中排除依赖」的方法。相反，所创建的 bundle 依赖于那些存在于用户环境(consumer's environment)中的依赖。此功能通常对 **library 开发人员**来说是最有用的，然而也会有各种各样的应用程序用到它。
 
-Tree-shaking 是 DCE 的一种新的实现，Javascript同传统的编程语言不同的是，javascript绝大多数情况需要通过网络进行加载，然后执行，加载的文件大小越小，整体执行时间更短，所以去除无用代码以减少文件体积，对javascript来说更有意义。
+**防止**将某些 `import` 的包(package)**打包**到 bundle 中，而是在运行时(runtime)再去从外部获取这些*扩展依赖(external dependencies)*，比如CDN的方式引入。
 
-Tree-shaking 和传统的 DCE的方法又不太一样，传统的DCE 消灭不可能执行的代码，而Tree-shaking 更关注宇消除没有用到的代码。
+比如在index.html中通过cdn的方式引入jquery而不是打包
 
-Dead Code 一般具有以下几个特征
+```html
+<script
+  src="https://code.jquery.com/jquery-3.1.0.js"
+  integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="
+  crossorigin="anonymous"
+></script>
+```
 
-•代码不会被执行，不可到达
-
-•代码执行的结果不会被用到
-
-•代码只会影响死变量（只写不读）
-
-JavaScript代码的tree shaking不是rollup，webpack，cc做的，而是著名的代码压缩优化工具uglify，uglify完成了javascript的DCE。
-
-模块必须采用ES6Module语法，因为treeShaking依赖ES6的静态语法：import 和 export。如果项目中使用了babel的话， `@babel/preset-env`默认将模块转换成CommonJs语法，因此需要设置`module：false`，webpack2后已经支持ESModule。
-
-ES6模块依赖关系是确定的，和运行时的状态无关，可以进行可靠的静态分析，这就是tree-shaking的基础。
-
-所谓静态分析就是不执行代码，从字面量上对代码进行分析，ES6之前的模块化，比如我们可以动态require一个模块，只有执行后才知道引用的什么模块，这个就不能通过静态分析去做优化。
-
-原理总结：
-
-- 只能作为模块顶层的语句出现
-- import的模块名只能是字符串常量
-- import binding 是 immutable的，引入的模块不能再进行修改
-
-代码删除：
-
-- uglify：判断程序流，判断变量是否被使用和引用，进而删除代码
-
-tree shaking具体能做的事情：
-
-1.Webpack Tree shaking从ES6顶层模块开始分析，可以清除未使用的模块
-
-2.Webpack Tree shaking会对多层调用的模块进行重构，提取其中的代码，简化函数的调用结构
-
-3.Webpack Tree shaking不会清除IIFE(立即调用函数表达式)：因为IIFE比较特殊，它在被翻译时(JS并非编译型的语言)就会被执行，Webpack不做程序流分析，它不知道IIFE会做什么特别的事情，所以不会删除这部分代码
-
-4.Webpack Tree shaking对于IIFE的返回函数，如果未使用会被清除
-
-5.Webpack Tree shaking结合第三方包使用，引入第三方包时不同的方式会造成不同的优化
+在webpack中配置
 
 ```javascript
-//全部引入，webpack不能清理
-import _ from 'lodash'
-import {last} from 'lodash'
-//第三种打包体积减少
-import last from 'lodash/last'; 
+module.exports = {
+  //...
+  externals: {
+    jquery: 'jQuery',
+  },
+};
+```
+
+这样就剥离了那些不需要改动的依赖模块，换句话，下面展示的代码还可以正常运行：
+
+```javascript
+import $ from 'jquery';
+
+$('.my-element').animate(/* ... */);
+```
+
+具有外部依赖(external dependency)的 bundle 可以在各种模块上下文(module context)中使用
+
+另一方面，如果你想将一个符合 CommonJS 模块化规则的类库外部化，你可以提供外联类库的类型以及类库的名称。
+
+如果你想将 `fs-extra` 从输出的 bundle 中剔除并在运行时中引入它，你可以如下定义：
+
+```javascript
+module.exports = {
+  // ...
+  externals: {
+    'fs-extra': 'commonjs2 fs-extra',
+  },
+};
+```
+
+则代码会变化为
+
+```javascript
+//import fs from 'fs-extra';
+const fs = require('fs-extra');
 ```
 
 
-
-链接：https://juejin.cn/post/6844903544756109319`side effects`是指那些当`import`的时候会执行一些动作，但是不一定会有任何`export`。比如`ployfill`,`ployfills`不对外暴露方法给主程序使用。
-
-`tree shaking` 不能自动的识别哪些代码属于`side effects`，因此手动指定这些代码显得非常重要，如果不指定可能会出现一些意想不到的问题。
-
-在`webapck中`，是通过`package.json`的`sideEffects`属性来实现的。
-
-```
-{
-  "name": "tree-shaking",
-  "sideEffects": false
-}
-```
-
-如果所有代码都不包含副作用，我们就可以简单地将该属性标记为`false`，来告知 `webpack`，它可以安全地删除未用到的`export`导出。
-
-如果你的代码确实有一些副作用，那么可以改为提供一个数组：
-
-```
-{
-  "name": "tree-shaking",
-  "sideEffects": [
-    "./src/common/polyfill.js"
-  ]
-}
-```
 
 ### 支持typescript
 
@@ -238,7 +215,7 @@ module.exports = {
 
 
 
-### 创建插件和loader
+### 创建插件
 
 一个webpack的插件有五部分构成：
 
@@ -270,11 +247,27 @@ MyExampleWebpackPlugin.prototype.apply = function(compiler) {
     callback();
   });
 };
+
+//ES6 写法
+class BasicPlugin{
+  // 在构造函数中获取用户给该插件传入的配置
+  constructor(options){
+  }
+
+  // Webpack 会调用 BasicPlugin 实例的 apply 方法给插件实例传入 compiler 对象
+  apply(compiler){
+    compiler.plugin('compilation',function(compilation) {
+    })
+  }
+}
+
+// 导出 Plugin
+module.exports = BasicPlugin;
 ```
 
 具体解释如下：
 
-`compiler` 对象代表了完整的 webpack 环境配置，负责文件的监听和启动编译，全局只有一个compiler对象。这个对象在启动 webpack 时被一次性建立，并配置好所有可操作的设置，包括 options，loader 和 plugin。当在 webpack 环境中应用一个插件时，插件将收到此 compiler 对象的引用。可以使用它来访问 webpack 的主环境。
+`compiler` 对象代表了完整的 webpack 环境配置，负责文件的监听和启动编译，全局只有一个compiler对象。这个对象在启动 webpack 时被一次性建立，并配置好所有可操作的设置，包括 options，loader 和 plugin。当在 webpack 环境中应用一个插件时，插件将收到此 compiler 对象的引用。可以使用它来访问 webpack 的主环境。这个对象在 Webpack 启动时候被实例化，它是全局唯一的，可以简单地把它理解为 Webpack 实例；
 
 `compilation` 对象代表了一次资源版本构建。当运行 webpack 开发环境中间件时，每当检测到一个文件变化，就会创建一个新的 compilation，从而生成一组新的编译资源。一个 compilation 对象表现了当前的模块资源、编译生成资源、变化的文件、以及被跟踪依赖的状态信息。compilation 对象也提供了很多关键时机的回调，以供插件做自定义处理时选择使用。
 
@@ -282,33 +275,142 @@ MyExampleWebpackPlugin.prototype.apply = function(compiler) {
 
 使用 compiler 对象时，你可以绑定提供了编译 compilation 引用的回调函数，然后拿到每次新的 compilation 对象。这些 compilation 对象提供了一些钩子函数，来钩入到构建流程的很多步骤中。
 
+上述插件在Webpack 启动后，在读取配置的过程中会先执行 `new BasicPlugin(options)` 初始化一个 BasicPlugin 获得其实例。 在初始化 compiler 对象后，再调用 `basicPlugin.apply(compiler)` 给插件实例传入 compiler 对象。 插件实例在获取到 compiler 对象后，就可以通过 `compiler.plugin(事件名称, 回调函数)` 监听到 Webpack 广播出来的事件。 并且可以通过 compiler 对象去操作 Webpack。
+
 有一些编译插件中的步骤是异步的，这样就需要额外传入一个 callback 回调函数，并且在插件运行结束时，_必须_调用这个回调函数。
 
-loader
+事件流
+
+Webpack 就像一条生产线，要经过一系列处理流程后才能将源文件转换成输出结果。 这条生产线上的每个处理流程的职责都是单一的，多个流程之间有存在依赖关系，只有完成当前处理后才能交给下一个流程去处理。 插件就像是一个插入到生产线中的一个功能，在特定的时机对生产线上的资源做处理。
+
+Webpack 通过 [Tapable](https://github.com/webpack/tapable) 来组织这条复杂的生产线。 Webpack 在运行过程中会广播事件，插件只需要监听它所关心的事件，就能加入到这条生产线中，去改变生产线的运作。 Webpack 的事件流机制保证了插件的有序性，使得整个系统扩展性很好。
+
+Webpack 的事件流机制应用了观察者模式，和 Node.js 中的 EventEmitter 非常相似。 Compiler 和 Compilation 都继承自 Tapable，可以直接在 Compiler 和 Compilation 对象上广播和监听事件，
+
+```javascript
+/** 广播出事件
+* event-name 为事件名称，注意不要和现有的事件重名
+* params 为附带的参数
+*/
+compiler.apply('event-name',params);
+
+/**
+* 监听名称为 event-name 的事件，当 event-name 事件发生时，函数就会被执行。
+* 同时函数中的 params 参数为广播事件时附带的参数。
+*/
+compiler.plugin('event-name',function(params) {
+
+});
+```
+
+
+
+常用api
+
+读取输出资源、代码块、模块及其依赖
+
+有些插件可能需要读取 Webpack 的处理结果，例如输出资源、代码块、模块及其依赖，以便做下一步处理。
+
+在 `emit` 事件发生时，代表源文件的转换和组装已经完成，在这里可以读取到最终将输出的资源、代码块、模块及其依赖，并且可以修改输出资源的内容。
+
+```javascript
+class Plugin {
+  apply(compiler) {
+    compiler.plugin('emit', function (compilation, callback) {
+      // compilation.chunks 存放所有代码块，是一个数组
+      compilation.chunks.forEach(function (chunk) {
+        // chunk 代表一个代码块
+        // 代码块由多个模块组成，通过 chunk.forEachModule 能读取组成代码块的每个模块
+        chunk.forEachModule(function (module) {
+          // module 代表一个模块
+          // module.fileDependencies 存放当前模块的所有依赖的文件路径，是一个数组
+          module.fileDependencies.forEach(function (filepath) {
+          });
+        });
+
+        // Webpack 会根据 Chunk 去生成输出的文件资源，每个 Chunk 都对应一个及其以上的输出文件
+        // 例如在 Chunk 中包含了 CSS 模块并且使用了 ExtractTextPlugin 时，
+        // 该 Chunk 就会生成 .js 和 .css 两个文件
+        chunk.files.forEach(function (filename) {
+          // compilation.assets 存放当前所有即将输出的资源
+          // 调用一个输出资源的 source() 方法能获取到输出资源的内容
+          let source = compilation.assets[filename].source();
+        });
+      });
+
+      // 这是一个异步事件，要记得调用 callback 通知 Webpack 本次事件监听处理结束。
+      // 如果忘记了调用 callback，Webpack 将一直卡在这里而不会往后执行。
+      callback();
+    })
+  }
+}
+```
+
+监听文件变化api
+
+```javascript
+// 当依赖的文件发生变化时会触发 watch-run 事件
+compiler.plugin('watch-run', (watching, callback) => {
+    // 获取发生变化的文件列表
+    const changedFiles = watching.compiler.watchFileSystem.watcher.mtimes;
+    // changedFiles 格式为键值对，键为发生变化的文件路径。
+    if (changedFiles[filePath] !== undefined) {
+      // filePath 对应的文件发生了变化
+    }
+    callback();
+});
+```
+
+默认情况下 Webpack 只会监视入口和其依赖的模块是否发生变化，在有些情况下项目可能需要引入新的文件，例如引入一个 HTML 文件。 由于 JavaScript 文件不会去导入 HTML 文件，Webpack 就不会监听 HTML 文件的变化，编辑 HTML 文件时就不会重新触发新的 Compilation。 为了监听 HTML 文件的变化，我们需要把 HTML 文件加入到依赖列表中，
+
+```javascript
+compiler.plugin('after-compile', (compilation, callback) => {
+  // 把 HTML 文件添加到文件依赖列表，好让 Webpack 去监听 HTML 模块文件，在 HTML 模版文件发生变化时重新启动一次编译
+    compilation.fileDependencies.push(filePath);
+    callback();
+});
+```
+
+判断当前使用了哪些插件
+
+```javascript
+// 判断当前配置使用使用了 ExtractTextPlugin，
+// compiler 参数即为 Webpack 在 apply(compiler) 中传入的参数
+function hasExtractTextPlugin(compiler) {
+  // 当前配置所有使用的插件列表
+  const plugins = compiler.options.plugins;
+  // 去 plugins 中寻找有没有 ExtractTextPlugin 的实例
+  return plugins.find(plugin=>plugin.__proto__.constructor === ExtractTextPlugin) != null;
+}
+```
+
+修改输出资源
+
+有些场景下插件需要修改、增加、删除输出的资源，要做到这点需要监听 `emit` 事件，因为发生 `emit` 事件时所有模块的转换和代码块对应的文件已经生成好， 需要输出的资源即将输出，因此 `emit` 事件是修改 Webpack 输出资源的最后时机。
+
+所有需要输出的资源会存放在 `compilation.assets` 中，`compilation.assets` 是一个键值对，键为需要输出的文件名称，值为文件对应的内容。
+
+```javascript
+compiler.plugin('emit', (compilation, callback) => {
+  // 设置名称为 fileName 的输出资源
+  compilation.assets[fileName] = {
+    // 返回文件内容
+    source: () => {
+      // fileContent 既可以是代表文本文件的字符串，也可以是代表二进制文件的 Buffer
+      return fileContent;
+      },
+    // 返回文件大小
+      size: () => {
+      return Buffer.byteLength(fileContent, 'utf8');
+    }
+  };
+  callback();
+});
+```
 
 
 
 ### 创建脚手架
-
-‘
-
-### webpack生命周期/构建原理
-
-从启动构建到输出结果一系列过程：
-
-（1）初始化参数：解析webpack配置参数，合并shell传入和webpack.config.js文件配置的参数，形成最后的配置结果。
-
-（2）开始编译：上一步得到的参数初始化compiler对象，注册所有配置的插件，插件监听webpack构建生命周期的事件节点，做出相应的反应，执行对象的 run 方法开始执行编译。
-
-（3）确定入口：从配置的entry入口，开始解析文件构建AST语法树，找出依赖，递归下去。
-
-（4）编译模块：递归中根据文件类型和loader配置，调用所有配置的loader对文件进行转换，再找出该模块依赖的模块，再递归本步骤直到所有入口依赖的文件都经过了本步骤的处理。
-
-（5）完成模块编译并输出：递归完事后，得到每个文件结果，包含每个模块以及他们之间的依赖关系，根据entry配置生成代码块chunk。
-
-（6）输出完成：输出所有的chunk到文件系统。
-
-注意：在构建生命周期中有一系列插件在做合适的时机做合适事情，比如UglifyPlugin会在loader转换递归完对结果使用UglifyJs压缩覆盖之前的结果。
 
 
 
@@ -476,7 +578,15 @@ Object.keys(config.entry).forEach((name)=>{
 
 减小搜索范围
 
-利用多线程、多进程打包
+利用多线程、多进程打包、压缩：运行在 Node.js 之上的 Webpack 是单线程模型的，也就是说 Webpack 需要处理的任务需要一件件挨着做，不能多个事情一起做。由于 JavaScript 是单线程模型，要想发挥多核 CPU 的能力，只能通过多进程去实现，而无法通过多线程实现。[HappyPack](https://github.com/amireh/happypack) 就能让 Webpack 做到这点，它把任务分解给多个子进程去并发的执行，子进程处理完后再把结果发送给主进程。
+
+用过 UglifyJS 的你一定会发现在构建用于开发环境的代码时很快就能完成，但在构建用于线上的代码时构建一直卡在一个时间点迟迟没有反应，其实卡住的这个时候就是在进行代码压缩。
+
+由于压缩 JavaScript 代码需要先把代码解析成用 Object 抽象表示的 AST 语法树，再去应用各种规则分析和处理 AST，导致这个过程计算量巨大，耗时非常多。
+
+[ParallelUglifyPlugin](https://github.com/gdborton/webpack-parallel-uglify-plugin) 就做了这个事情。 当 Webpack 有多个 JavaScript 文件需要输出和压缩时，原本会使用 UglifyJS 去一个个挨着压缩再输出， 但是 ParallelUglifyPlugin 则会开启多个子进程，把对多个文件的压缩工作分配给多个子进程去完成，每个子进程其实还是通过 UglifyJS 去压缩代码，但是变成了并行执行。 所以 ParallelUglifyPlugin 能更快的完成对多个文件的压缩工作。
+
+使用 ParallelUglifyPlugin 也非常简单，把原来 Webpack 配置文件中内置的 UglifyJsPlugin 去掉后，再替换成 ParallelUglifyPlugin，
 
 开启缓存，提升二次构建的速度。
 
@@ -509,6 +619,24 @@ Object.keys(config.entry).forEach((name)=>{
 
 
 ## Webpack loader
+
+### loader原理
+
+module 一开始构建的过程中，首先会创建一个 loaderContext 对象，它和这个 module 是一一对应的关系，而这个 module 所使用的所有 loaders 都会共享这个 loaderContext 对象，每个 loader 执行的时候上下文就是这个 loaderContext 对象
+
+一共有4种loader，`同一种类型文件被多条rules匹配`上的话会按以下叠加顺序处理，通过`enforce`声明类型
+
+- **post**
+- **inline**
+- **normal(AutoLoaders)(`默认`)**
+- **pre(前置loader)**
+
+Loader默认加载顺序
+post(后置)->inline(内联)->normal(autoLoaders)->pre(前置)
+
+控制loader加载(require路径)
+
+### 常见loader
 
 file-loader
 
@@ -554,643 +682,31 @@ babel-loader
 
 
 
+### 创建loader
 
+一个`loader`可以看做是一个`node`模块，也可以看做一个`loader`就是一个函数 (loader会导出一个函数)，众所周知`webpack`只能识别`js`文件，`loader`在`webpack`中担任的角色就是翻译工作，它可以让其它非`js`的资源（source）可以在`webpack`中通过`loader`顺利加载。
 
+编写loader的原则：
 
+- 单一职责，一个loader只做一件事
+- 调用方式，loader是从右向左执行，链式调用
+- 统一原则，loader输入和输出都字符串
 
+loader导出尽量别使用箭头函数，loader内部属性都是靠this来获取的，如this.callback，this.sync
 
-
-## Webpack插件汇总
-
-### 功能类
-
-html-webpack-plugin
-
-自动生成html，基本用法：
-
-```javascript
-new HtmlWebpackPlugin({
-  filename: 'index.html', // 生成文件名
-  template: path.join(process.cwd(), './index.html') // 模班文件
-})
-```
-
-copy-webpack-plugin
-
-拷贝资源插件,基本用法
+一个最简单的loader代码
 
 ```javascript
-new CopyWebpackPlugin([
-  {
-    from: path.join(process.cwd(), './vendor/'),
-    to: path.join(process.cwd(), './dist/'),
-    ignore: ['*.json']
-  }
-])
-```
-
-webpack-manifest-plugin && assets-webpack-plugin
-
-俩个插件效果一致，都是生成编译结果的资源单，只是资源单的数据结构不一致而已。
-
-webpack-manifest-plugin 基本用法：
-
-```javascript
-module.exports = {
-  plugins: [
-    new ManifestPlugin()
-  ]
-}
-```
-
-assets-webpack-plugin 基本用法：
-
-```javascript
-module.exports = {
-  plugins: [
-    new AssetsPlugin()
-  ]
-}
-```
-
-clean-webpack-plugin
-
-在编译之前清理指定目录指定内容,基本用法
-
-```javascript
-// 清理目录
-const pathsToClean = [
-  'dist',
-  'build'
-]
- 
-// 清理参数
-const cleanOptions = {
-  exclude:  ['shared.js'], // 跳过文件
-}
-module.exports = {
-  // ...
-  plugins: [
-    new CleanWebpackPlugin(pathsToClean, cleanOptions)
-  ]
-}
-```
-
-compression-webpack-plugin
-
-提供带 Content-Encoding 编码的压缩版的资源,基本用法
-
-```javascript
-module.exports = {
-  plugins: [
-    new CompressionPlugin()
-  ]
-}
-```
-
-progress-bar-webpack-plugin
-
-编译进度条插件,基本用法
-
-```javascript
-module.exports = {
-  //...
-  plugins: [
-    new ProgressBarPlugin()
-  ]
-}
-```
-
-speed-measure-webpack-plugin
-
-进行构建速度分析，可以看到各个 loader、plugin 的构建时长，后续可针对耗时 loader、plugin 进行优化。
-
-```shell
-npm i -D speed-measure-webpack-plugin
-```
-
-使用
-
-```javascript
-const SpeedMeasurePlugin = require("speed-measure-webpack-plugin");
-const smp = new SpeedMeasurePlugin();
-module.exports = smp.wrap({
-  // ...webpack config...
-})
-```
-
-
-
-
-
-### 代码相关类
-
-webpack.ProvidePlugin
-
-自动加载模块，如 出现，就会自动加载模块；出现，就会自动加载模块； 默认为'jquery'的exports，用法：
-
-```javascript
-new webpack.ProvidePlugin({
-  $: 'jquery',
-})
-```
-
-webpack.DefinePlugin
-
-定义全局常量，用法：
-
-```javascript
-new webpack.DefinePlugin({
-  'process.env': {
-    NODE_ENV: JSON.stringify(process.env.NODE_ENV)
-  }
-})
-```
-
-mini-css-extract-plugin && extract-text-webpack-plugin
-
-提取css样式，对比：
-
-- mini-css-extract-plugin 为webpack4及以上提供的plugin，支持css chunk
-- extract-text-webpack-plugin 只能在webpack3 及一下的版本使用，不支持css chunk
-
-extract-text-webpack-plugin基本用法 ：
-
-```javascript
-const ExtractTextPlugin = require("extract-text-webpack-plugin");
- 
-module.exports = {
-  module: {
-    rules: [
-      {
-        test: /\.css$/,
-        use: ExtractTextPlugin.extract({
-          fallback: "style-loader",
-          use: "css-loader"
-        })
-      }
-    ]
-  },
-  plugins: [
-    new ExtractTextPlugin("styles.css"),
-  ]
-}
-```
-
-mini-css-extract-plugin 基本用法:
-
-```javascript
-const MiniCssExtractPlugin = require("mini-css-extract-plugin");
-module.exports = {
-    module: {
-    rules: [
-      {
-        test: /\.css$/,
-        use: [
-          {
-            loader: MiniCssExtractPlugin.loader,
-            options: {
-              publicPath: '/'  // chunk publicPath
-            }
-          },
-          "css-loader"
-        ]
-      }
-    ]
-  },
-  plugins: [
-    new MiniCssExtractPlugin({
-      filename: "[name].css", // 主文件名
-      chunkFilename: "[id].css"  // chunk文件名
-    })
-  ]
-}
-```
-
-
-
-### 编译结果优化类
-
-wbepack.IgnorePlugin
-
-忽略regExp匹配的模块，用法
-
-```javascript
-new webpack.IgnorePlugin(/^\.\/locale$/, /moment$/)
-```
-
-uglifyjs-webpack-plugin
-
-代码丑化，用于js压缩,
-
-```javascript
-module.exports = {
-  //...
-  optimization: {
-    minimizer: [new UglifyJsPlugin({
-      cache: true,   // 开启缓存
-      parallel: true, // 开启多线程编译
-      sourceMap: true,  // 是否sourceMap
-      uglifyOptions: {  // 丑化参数
-        comments: false,
-        warnings: false,
-        compress: {
-          unused: true,
-          dead_code: true,
-          collapse_vars: true,
-          reduce_vars: true
-        },
-        output: {
-          comments: false
-        }
-      }
-    }]
-  }
+module.exports = function(source) {
+  // source 为 compiler 传递给 Loader 的一个文件的原内容
+  // 该函数需要返回处理后的内容，这里简单起见，直接把原内容返回了，相当于该 Loader 没有做任何转换
+  return source;
 };
 ```
 
-optimize-css-assets-webpack-plugin
-
-css压缩，主要使用 [cssnano](https://github.com/cssnano/cssnano) 压缩器,用法
+由于 Loader 运行在 Node.js 中，你可以调用任何 Node.js 自带的 API，或者安装第三方模块进行调用：
 
 ```javascript
-module.exports = {
-  //...
-  optimization: {
-    minimizer: [new OptimizeCssAssetsPlugin({
-      cssProcessor: require('cssnano'),   // css 压缩优化器
-      cssProcessorOptions: { discardComments: { removeAll: true } } // 去除所有注释
-    })]
-  }
-};
-```
-
-webpack-md5-hash
-
-使你的chunk根据内容生成md5，用这个md5取代 webpack chunkhash,基本用法
-
-```javascript
-var WebpackMd5Hash = require('webpack-md5-hash');
- 
-module.exports = {
-  // ...
-  output: {
-    //...
-    chunkFilename: "[chunkhash].[id].chunk.js"
-  },
-  plugins: [
-    new WebpackMd5Hash()
-  ]
-};
-```
-
-SplitChunksPlugin
-
-CommonChunkPlugin 的后世，用于chunk切割。
-
-webpack 把 chunk 分为两种类型，一种是初始加载initial chunk，另外一种是异步加载 async chunk，如果不配置SplitChunksPlugin，webpack会在production的模式下自动开启，默认情况下，webpack会将 node_modules 下的所有模块定义为异步加载模块，并分析你的 entry、动态加载（import()、require.ensure）模块，找出这些模块之间共用的node_modules下的模块，并将这些模块提取到单独的chunk中，在需要的时候异步加载到页面当中，其中默认配置如下：
-
-```javascript
-module.exports = {
-  //...
-  optimization: {
-    splitChunks: {
-      chunks: 'async', // 异步加载chunk
-      minSize: 30000,
-      maxSize: 0,
-      minChunks: 1,
-      maxAsyncRequests: 5,
-      maxInitialRequests: 3,
-      automaticNameDelimiter: '~', // 文件名中chunk分隔符
-      name: true,
-      cacheGroups: {
-        vendors: {
-          test: /[\\/]node_modules[\\/]/,  // 
-          priority: -10
-        },
-        default: {
-          minChunks: 2,  // 最小的共享chunk数
-          priority: -20,
-          reuseExistingChunk: true
-        }
-      }
-    }
-  }
-};
-```
-
-### 编译优化类
-
-DllPlugin && DllReferencePlugin && autodll-webpack-plugin
-
-dllPlugin 将模块预先编译，DllReferencePlugin 将预先编译好的模块关联到当前编译中，当 webpack 解析到这些模块时，会直接使用预先编译好的模块。
-
-autodll-webpack-plugin 相当于 dllPlugin 和 DllReferencePlugin 的简化版，其实本质也是使用 dllPlugin && DllReferencePlugin，它会在第一次编译的时候将配置好的需要预先编译的模块编译在缓存中，第二次编译的时候，解析到这些模块就直接使用缓存，而不是去编译这些模块。
-
-dllPlugin 基本用法：
-
-```javascript
-const output = {
-  filename: '[name].js',
-  library: '[name]_library',
-  path: './vendor/'
-}
-
-module.exports = {
-  entry: {
-    vendor: ['react', 'react-dom']  // 我们需要事先编译的模块，用entry表示
-  },
-  output: output,
-  plugins: [
-    new webpack.DllPlugin({  // 使用dllPlugin
-      path: path.join(output.path, `${output.filename}.json`),
-      name: output.library // 全局变量名， 也就是 window 下 的 [output.library]
-    })
-  ]
-}
-```
-
-DllReferencePlugin 基本用法：
-
-```javascript
-const manifest = path.resolve(process.cwd(), 'vendor', 'vendor.js.json')
-
-module.exports = {
-  plugins: [
-    new webpack.DllReferencePlugin({
-      manifest: require(manifest), // 引进dllPlugin编译的json文件
-      name: 'vendor_library' // 全局变量名，与dllPlugin声明的一致
-    }
-  ]
-}
-```
-
-autodll-webpack-plugin 基本用法：
-
-```javascript
-module.exports = {
-  plugins: [
-    new AutoDllPlugin({
-      inject: true, // 与 html-webpack-plugin 结合使用，注入html中
-      filename: '[name].js',
-      entry: {
-        vendor: [
-          'react',
-          'react-dom'
-        ]
-      }
-    })
-  ]
-}
-```
-
-happypack && thread-loader
-
-多线程编译，加快编译速度，thread-loader不可以和 mini-css-extract-plugin 结合使用。
-
-happypack 基本用法：
-
-```javascript
-const HappyPack = require('happypack');
-const os = require('os');
-const happyThreadPool = HappyPack.ThreadPool({ size: os.cpus().length });
-const happyLoaderId = 'happypack-for-react-babel-loader';
-
-module.exports = {
-  module: {
-    rules: [{
-      test: /\.jsx?$/,
-      loader: 'happypack/loader',
-      query: {
-        id: happyLoaderId
-      },
-      include: [path.resolve(process.cwd(), 'src')]
-    }]
-  },
-  plugins: [new HappyPack({
-    id: happyLoaderId,
-    threadPool: happyThreadPool,
-    loaders: ['babel-loader']
-  })]
-}
-```
-
-thread-loader 基本用法:
-
-```javascript
-module.exports = {
-  module: {
-    rules: [
-      {
-        test: /\.js$/,
-        include: path.resolve("src"),
-        use: [
-          "thread-loader",
-          // your expensive loader (e.g babel-loader)
-          "babel-loader"
-        ]
-      }
-    ]
-  }
-}
-```
-
-
-
-hard-source-webpack-plugin && cache-loader
-
-使用模块编译缓存，加快编译速度。
-
-hard-source-webpack-plugin ,基本用法:
-
-```javascript
-module.exports = {
-  plugins: [
-    new HardSourceWebpackPlugin()
-  ]
-}
-```
-
-cache-loader 基本用法：
-
-```javascript
-module.exports = {
-  module: {
-    rules: [
-      {
-        test: /\.ext$/,
-        use: [
-          'cache-loader',
-          ...loaders
-        ],
-        include: path.resolve('src')
-      }
-    ]
-  }
-}
-```
-
-
-
-### 编译分析类
-
-webpack-bundle-analyzer
-
-编译模块分析插件，基本用法
-
-```javascript
-new BundleAnalyzerPlugin({
-  analyzerMode: 'server',
-  analyzerHost: '127.0.0.1',
-  analyzerPort: 8889,
-  reportFilename: 'report.html',
-  defaultSizes: 'parsed',
-  generateStatsFile: false,
-  statsFilename: 'stats.json',
-  statsOptions: null,
-  logLevel: 'info'
-}),
-```
-
-stats-webpack-plugin && PrefetchPlugin
-
-stats-webpack-plugin 将构建的统计信息写入文件，该文件可在 http://webpack.github.io/analyse中上传进行编译分析，并根据分析结果，可使用 PrefetchPlugin 对部分模块进行预解析编译
-
-stats-webpack-plugin 基本用法：
-
-```javascript
-module.exports = {
-  plugins: [
-    new StatsPlugin('stats.json', {
-      chunkModules: true,
-      exclude: [/node_modules[\\\/]react/]
-    })
-  ]
-};
-```
-
-PrefetchPlugin 基本用法：
-
-```javascript
-module.exports = {
-  plugins: [
-    new webpack.PrefetchPlugin('/web/', 'app/modules/HeaderNav.jsx'),
-    new webpack.PrefetchPlugin('/web/', 'app/pages/FrontPage.jsx')
-];
-}
-```
-
-speed-measure-webpack-plugin
-
-统计编译过程中，各loader和plugin使用的时间,基本用法
-
-```javascript
-const SpeedMeasurePlugin = require("speed-measure-webpack-plugin");
- 
-const smp = new SpeedMeasurePlugin();
- 
-const webpackConfig = {
-  plugins: [
-    new MyPlugin(),
-    new MyOtherPlugin()
-  ]
-}
-module.exports = smp.wrap(webpackConfig);
-```
-
-
-
-### react相关
-
-react-refresh-webpack-plugin
-
-热更新 react 组件。
-
-```shell
-npm install -D @pmmmwh/react-refresh-webpack-plugin react-refresh
-```
-
-使用
-
-```javascript
-const ReactRefreshWebpackPlugin = require('@pmmmwh/react-refresh-webpack-plugin');
-
-module.exports = {
-    plugins: [
-        new webpack.HotModuleReplacementPlugin(),
-        new ReactRefreshWebpackPlugin(),
-    ]
-}
-```
-
-
-
-## 分离/合并配置
-
-安装webpack-merge
-
-```shell
-npm i webpack-merge -D
-```
-
-在webpackjs中引入别的webpack配置
-
-```javascript
-const {merge} = require('webpack-merge');
-const commonConfig = require('./webpack.common');
-
-const prodConfig = {
-    mode:'production',
-    //可以找出报错代码的源代码路径
-    //cheap 只报告行号（不加会报告列）  module 会报告loader及第三方依赖的错误位置
-    //加了inline就不产生映射文件了
-    //生产环境不需要eval
-    devtool:'cheap-module-source-map',
-    plugins: [
-    ]
-}
-
-module.exports = merge(commonConfig,prodConfig);
-```
-
-
-
-
-
-## 利用source-map还原代码
-
-webpack打包时如果有配置sourcemap，可能在生成js时生成对应的map文件，而利用这个文件甚至可以还原js和组件
-
-reverse-sourcemap
-
-```shell
-npm install --global reverse-sourcemap
-```
-
-找到webpack生成的js对应的map文件，一般为js.map文件，进行还原
-
-```shell
 
 ```
-
-
-
-
-
-## webpack学习资源
-
-wepack：https://www.kancloud.cn/sllyli/webpack/1242354
-
-
-
-
-
-
-
-
-
-
-
-​                   
-
 
